Headings: Fix heading anchor link icon alignment (#421)
* Heading: Fix anchor link icon alignment

* Heading: Handle edge cases

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -1785,7 +1785,8 @@ a:hover {
 
 .headerlink {
   text-decoration: none;
-
+  position: relative;
+  display: flex;
   color: oklch(var(--color-foreground));
 }
 
